[package]
name = "dnd-adv-dis"
version = "0.1.0"
authors = ["KP <conrimaceogain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
log = "0.4.8"
simple_logger = { version = "1.6.0", default-features = false }
gnuplot = "0.0.35"
